Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120265

QDoc incorrectly generates list of types for \compareswith

    XMLWordPrintable

Details

    • e66b37641 (dev), c0c5fa0a3 (6.7)
    • DaVinci 92

    Description

      The \compareswith command expects a list of types, separated by whitespaces.

      However, some types may have whitespaces in their names. For example, long double, or unsigned long. QDoc renders them as two individual types.

      I would expect that wrapping them into {} could help, but it also renders incorrectly:

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            diseraluca Luca Di Sera
            ivan.solovev Ivan Solovev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes